--- a/portfolio/css/styles.css
+++ b/portfolio/css/styles.css
@@ -12,7 +12,7 @@ ul.text-muted, .text-muted li{list-style-type: none;}
 /* footer */
 .pull-right{font-size: 25px;width: 100%;}
 footer .container-fluid .footer-textalign{text-align: center;}
-.contact-bg .fotexth2{color: #000;font-weight: bold;}
+.contact-bg .fotexth2{color: #000;}
 /* ================================================================== */
 @media (max-width: 767px) {
   header .header-content{height: 500px;}
