백그라운드이미지제거

--- a/portfolio/css/styles.css
+++ b/portfolio/css/styles.css
@@ -257,7 +257,7 @@ header {
     text-align: center;
     color: #fff;
     width: 100%;
-    background-image: url('../assets/lake.jpg');
+    /* background-image: url('../assets/lake.jpg'); */
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
