--- a/AreumJeon/css/loading.css
+++ b/AreumJeon/css/loading.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /* 로딩 */
-.wrap_loading{
+/* .wrap_loading{
   width: 100%;
   height: 100%;
   background: #fff;
@@ -88,4 +88,58 @@
   100% {
     background-color: #7F0041;
   }
+} */
+
+
+
+.bg{
+  position: fixed;
+  /* width:100%; height: 100%; */
+  left:0; right:0; top:0; bottom:0;
+  /* background: linear-gradient(45deg, #0f8, #08f); */
+  background: rgb(50, 60, 83);
+  filter:hue-rotate(0deg);
+  animation: hue 10000ms infinite linear;
+  z-index: 9999;
+}
+.loading{
+  position: absolute;
+  top:50%; left:50%;
+  transform: translate(-50%, -50%);
+  width: 150px; height: 150px;
+  font-family: sans-serif;
+  z-index: 10000;
+}
+.loading h1{
+  color:#fff; letter-spacing: 10px;
+  font-weight: normal;
+  font-size:15px;
+  text-align: center;
+}
+.loading div{
+  width:80px; height: 80px;
+  border: 10px solid #fff;
+  border-radius: 50%;
+  margin:10px auto;
+  box-sizing: border-box;
+  animation: load 2s infinite linear;
+}
+.loading .dot{
+  width:10px; height: 10px;
+  border-radius: 50%;
+  background: #0f8;
+  display: inline-block;
+  position: absolute;
+  animation: hue 10000ms infinite linear;
+}
+
+/* 애니메이션 */
+@keyframes load {
+  0%{transform: rotate(0deg);}
+  100%{transform: rotate(360deg);}
+}
+
+@keyframes hue {
+  0%{filter: hue-rotate(0deg);}
+  100%{filter: hue-rotate(360deg);}
 }
