--- a/AreumJeon/css/portfolio.css
+++ b/AreumJeon/css/portfolio.css
@@ -70,7 +70,7 @@ header.fixed{
   top: 0;
   left: 0;
   right: 0;
-  background-color: rgba(0, 0, 0, 0.13)
+  background-color: rgba(0, 0, 0, 0.13);
   /* background-color: #282537; */
   z-index: 999999;
   width: 100%;
@@ -209,7 +209,7 @@ section .box:nth-child(6){background: #fff;height: 500px;}
 /* swiper 재설정 */
 #slide .main_slide{
   width: 100%;
-  height: 655px;
+  height: 800px;
 }
 /* #slide .main_slide .parallax-bg{
   position: absolute;
@@ -301,8 +301,8 @@ section .box:nth-child(6){background: #fff;height: 500px;}
 /* slide===================================================================== */
 #slide{
   width: 100%;}
+
 /* main swiper slide */
-.main_slide {}
 .main_slide div.swiper-wrapper .swiper-slide {
   text-align: center;
   font-size: 18px;
@@ -346,6 +346,9 @@ section .box:nth-child(6){background: #fff;height: 500px;}
 
 /* 슬라이드 공통 */
 .slide_one, .about_two{background: #fff;}
+.about_two{
+
+}
 /* 텍스트 공통 */
 .fixedtext_wrap{
   position: absolute;
@@ -392,7 +395,7 @@ section .box:nth-child(6){background: #fff;height: 500px;}
   position: absolute;
   width: 300px;
   left: 50%;
-  bottom: 50%;
+  /* bottom: 50%; */
   margin-bottom: -30px;
   z-index: 100;
   text-align: center;
@@ -417,7 +420,9 @@ section .box:nth-child(6){background: #fff;height: 500px;}
 }
 .button_link2 a:nth-child(1):hover, .button_link2 a:nth-child(2):hover{
   background: #efefef;color: #000 !important; transition: 1s ease-in-out;}
-.swiper-slide.swiper-slide-active .button_link2{opacity: 1;right: 0;transform: translate3d(0,0,0);}
+.swiper-slide.swiper-slide-active .button_link2{opacity: 1;
+  left: 800px;transform: translate3d(0,0,0);
+}
 
 
 /* 페이지네이션 재정비*/
@@ -451,9 +456,10 @@ section .box:nth-child(6){background: #fff;height: 500px;}
 /* .about_two .parallax-bg{opacity: .4;} */
 .about_logo{
   position: absolute;
+  top: 300px;
   left: 0;
   width: 400px;
-  margin-left: 250px;
+  margin-left: 400px;
   opacity: 0;
   z-index: 1000;
 }
