--- a/AreumJeon/css/main.css
+++ b/AreumJeon/css/main.css
@@ -162,5 +162,6 @@ html,body{
   .star{height: 735px;}
   .star .parallax-bg.main_parallax_bg{margin-top: 135px;}
   .maintext1{top: 50px;}
+  .maintext2{padding-top: 150px;}
 
 }
