--- a/AreumJeon/css/portfolio.css
+++ b/AreumJeon/css/portfolio.css
@@ -60,6 +60,7 @@ header.fixed{
   width: 100%;
   height: 85px;
   line-height: 62px;
+  display: block !important;
 }
 header .container{
   max-width: 1200px;
