--- a/AreumJeon/css/main.css
+++ b/AreumJeon/css/main.css
@@ -85,25 +85,12 @@ html,body{
   80%{opacity: .9;box-shadow: 0px 0px 20px 0.5px blue;}
   90%{opacity: 0;box-shadow: 0px 0px 20px 0.5px blue;}
 }
-
-
-.maintext2{padding-top: 135px;}
-.maintext2 li{
-  /* display: inline-block; */
-  /* position: absolute; */
-  left: 50%;
-  /* top: 50%; */
-  text-align: center;
-  font-size: 8px;
-  color: #fff;
-  /* margin-top: -100px; */
-  padding-bottom: 10px;
-  animation-duration: 2s;
-  animation-delay: 1s;
-}
 /* main star end ============================================================*/
 
+
+
 /* miantext */
+
 .maintext1{
   position: relative;
   top:15%; left:50%; height: 150px;
@@ -151,6 +138,20 @@ html,body{
   to{bottom:10px;}
 }
 
+.maintext2{padding-top: 135px;}
+.maintext2 li{
+  /* display: inline-block; */
+  /* position: absolute; */
+  left: 50%;
+  /* top: 50%; */
+  text-align: center;
+  font-size: 8px;
+  color: #fff;
+  /* margin-top: -100px; */
+  padding-bottom: 10px;
+  /* animation-duration: 2s; */
+  animation-delay: 1s;
+}
 
 
 /* mobile ====================================================================*/
