--- a/AreumJeon/css/portfolio.css
+++ b/AreumJeon/css/portfolio.css
@@ -5,20 +5,20 @@
   position: relative;
   display: flex;
   justify-content: center;
-  background:#efefed;
+  background:none;
   color: #000;
-  height: 100px;
+  height: 200px;
   align-items: center;
+  padding-top: 200px;
 }
 .intro button{
   position: absolute;
-  top: -70px;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%,50%);
   width: 70px;
   height: 70px;
-  background: #b7b0b0;
-  border: 1px solid #b7b0b0;
+  background: none;
+  border: none;
   font-size: 1.5em;
   color: #000;
   overflow: hidden;
@@ -105,18 +105,18 @@ header .logo{margin-top: -7px;}
 
 
 /* 네비게이션 ================================================================*/
-header nav{
+header .nav{
   right: 0;
   top: 7px;
   overflow: hidden;
   position: absolute;
 }
-header nav ul li{
+header .nav ul li{
   text-align: center;
   padding-left: 0 !important;
   padding-right: 0 !important;
 }
-header nav ul li a{
+header .nav ul li a{
   display: block;
   line-height: 50px;
   font-size: 12px;
@@ -124,15 +124,15 @@ header nav ul li a{
   transition: all 0.5s;
   letter-spacing: 0px;
 }
-header nav ul li a:hover{text-decoration: none;}
-header nav ul li a.active{
+header .nav ul li a:hover{text-decoration: none;}
+header .nav ul li a.active{
   background: none;
   font-weight: bold;
   color: #000;
   letter-spacing: 3px;
 }
-header nav ul li a::after,
-header nav ul li a::before{
+header .nav ul li a::after,
+header .nav ul li a::before{
   backface-visibility: hidden;
   border: 1px solid #fff0;
   bottom: 0px;
@@ -143,27 +143,27 @@ header nav ul li a::before{
   transition: all 280ms ease-in-out;
   width: 0;
 }
-header nav ul li a:hover::after,
-header nav ul li a:hover::before{
+header .nav ul li a:hover::after,
+header .nav ul li a:hover::before{
   backface-visibility: hidden;
   border-color: #fff;
   transition: width 350ms ease-in-out;
   width: 90%;
 }
-header nav ul li a.active::after,
-header nav ul li a.active::before{
+header .nav ul li a.active::after,
+header .nav ul li a.active::before{
   backface-visibility: hidden;
   border-color: #000;
   transition: width 350ms ease-in-out;
   width: 90%;
 }
-header nav ul li a.active:hover::after,
-header nav ul li a.active:hover::before{
+header .nav ul li a.active:hover::after,
+header .nav ul li a.active:hover::before{
   border-color: #000;
 }
-header nav ul li a:hover{letter-spacing: 3px;}
+header .nav ul li a:hover{letter-spacing: 3px;}
 
-.nav nav ul li a:hover{
+.nav ul li a:hover{
   color:#fff;
 }
 .nav button{display: none;}
@@ -647,6 +647,7 @@ footer small{
   header{
     position: fixed;
     width: 100%;
+    height: 70px;
     top: 0;
     background: #efefed;
     display: block !important;
@@ -655,45 +656,55 @@ footer small{
     transition: background-color 1s ease;}
   header .logo{text-align: center;}
   header .logo a{font-size: 14px;color: gray;}
-   /* .nav nav.mobile{display: block;} */
   header .container h1.logo a{float: none;}
 
    /* nivigation */
-   .nav nav{
-     position: fixed;
-     top: 0;
-     right: -100%;
-     width: 60%;
-     background: #424242;
-     z-index: 10;
-     transition: right .5s;
+   header .nav{
+    right: -250px;
+    width: 60%;
+    margin-top: -10px;
+    z-index: 10;
+    position: fixed;
+    height: 100%;
+    background: #424242;
+    overflow: visible;
+    box-shadow: 0 0 10px 5px rgba(0,0,0,0.2);
+    transition: all 0.5s;
    }
-   .nav nav.on{top: 0;right: 0;width: 60%;
-     box-shadow: 0 0 10px 5px rgba(0,0,0,0.2);}
+   .nav.on{
+     right: 0;
+
+   }
    .nav button{
-     display: block;
-     position: fixed;
-     top: 5px;right: 20px;
-     width:50px; height: 50px;
+     display: block !important;
+     position: absolute;
+     left: -49px;
+     width: 50px;
+     height: 50px;
      font-size: 2em;
+     padding: 15px 15px 5px 5px;
      background: none;
-     color:#000;
+     color: #000;
      border: 0;
-     z-index: 100;
    }
-   .nav nav ul{
+   .nav ul{
      padding-top: 70px;
    }
-   header nav ul li{
+   header .nav ul li{
      padding-bottom: 10px;
    }
-   header nav ul li a.active::after,
-   header nav ul li a.active::before{width: 50%;border-color: #fff;}
+   header .nav ul li a{padding: 0 50px;}
+   /* header nav ul li a.active::after,
+   header nav ul li a.active::before{width: 50%;border-color: #fff;} */
 
+/* intro */
   .intro{height: auto;}
-  .intro button{top: -100px;width: 55px;height: 55px;}
+  .intro button{
+    /* width: 55px;height: 55px; */
+  }
 
 /* slide */
+  body > section{margin-top: -55px;}
    #slide .main_slide{height: 500px;}
    .swiper-slide .parallax-bg{height: 500px;}
    .swiper-wrapper{height: 500px;}
@@ -727,13 +738,8 @@ footer small{
 }
 /* 태블릿 ====================================================================*/
 @media (min-width:768px) {
-  header nav{
-    /* 네비게이션 메뉴 사이 간격 */
-    width: 450px;
-  }
-  header nav ul li{
-    padding:0;
-  }
+  header .nav ul{width: 450px;}
+  header .nav ul li{padding:0;}
 }
 /* pc */
 @media (min-width:1200px) {
